# gobsv

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  go.mod  gobsv.go  gobsv_test.go
bsv-go/: Cargo.toml
bsv-go/src/: address.rs  bsm.rs  chainparams.rs  ecdh.rs  ecdsa.rs  ecies.rs  encryption.rs  hash.rs  interpreter.rs  lib.rs  script.rs  sighash.rs  signature.rs
bsv-go/src/keypair/: extended_private_key.rs  extended_public_key.rs  mod.rs  public_key.rs
bsv-go/src/transaction/: mod.rs  transaction.rs  txin.rs  txout.rs
lib/: bsv_go.h  main.h  private_key.h  public_key.h  script.h  transaction.h  txin.h  txout.h
libs/: globe.go  privatekey.go  privatekey_test.go  publickey.go  publickey_test.go  script.go  txin.go
